doc: update swagger with all routes & deprecated old image api route
