# src/features/api/features/player.ts
@@ -1,4 +1,3 @@
-/* eslint-disable @typescript-eslint/no-explicit-any */
 import { BrowserWindow } from "electron";
 import { Router } from "express";
 import { globalEvents } from "../../../constants/globalEvents";
@@ -12,19 +11,113 @@ export const addPlaybackControl = (expressApp: Router, mainWindow: BrowserWindow
   const windowEvent = handleWindowEvent(mainWindow);
   const createRoute = (route: string) => `/player${route}`;
 
+  /**
+   * @swagger
+   * tags:
+   *   name: player
+   *   description: The player control API
+   * components:
+   *   schemas:
+   *     OkResponse:
+   *       type: string
+   *       example: "OK"
+   */
   const createPlayerAction = (route: string, action: string) => {
     expressApp.post(createRoute(route), (req, res) => windowEvent(res, action));
   };
 
   if (settingsStore.get(settings.playBackControl)) {
+    /**
+     * @swagger
+     * /play:
+     *   get:
+     *     summary: Play action
+     *     responses:
+     *       200:
+     *         description: Action performed
+     *         content:
+     *           text/plain:
+     *             schema:
+     *               $ref: '#/components/schemas/OkResponse'
+     */
     createPlayerAction("/play", globalEvents.play);
+
+    /**
+     * @swagger
+     * /favorite/toggle:
+     *   post:
+     *     summary: Toggle favorite
+     *     responses:
+     *       200:
+     *         description: Action performed
+     *         content:
+     *           text/plain:
+     *             schema:
+     *               $ref: '#/components/schemas/OkResponse'
+     */
     createPlayerAction("/favorite/toggle", globalEvents.toggleFavorite);
+
+    /**
+     * @swagger
+     * /pause:
+     *   get:
+     *     summary: Pause action
+     *     responses:
+     *       200:
+     *         description: Action performed
+     *         content:
+     *           text/plain:
+     *             schema:
+     *               $ref: '#/components/schemas/OkResponse'
+     */
     createPlayerAction("/pause", globalEvents.pause);
+
+    /**
+     * @swagger
+     * /next:
+     *   get:
+     *     summary: Next action
+     *     responses:
+     *       200:
+     *         description: Action performed
+     *         content:
+     *           text/plain:
+     *             schema:
+     *               $ref: '#/components/schemas/OkResponse'
+     */
     createPlayerAction("/next", globalEvents.next);
+
+    /**
+     * @swagger
+     * /previous:
+     *   get:
+     *     summary: Previous action
+     *     responses:
+     *       200:
+     *         description: Action performed
+     *         content:
+     *           text/plain:
+     *             schema:
+     *               $ref: '#/components/schemas/OkResponse'
+     */
     createPlayerAction("/previous", globalEvents.previous);
+
     createPlayerAction("/shuffle/toggle", globalEvents.toggleShuffle);
     createPlayerAction("/repeat/toggle", globalEvents.toggleRepeat);
 
+    /**
+     * @swagger
+     * /playpause:
+     *   get:
+     *     summary: Toggle play/pause
+     *     responses:
+     *       200:
+     *         description: Action performed
+     *         content:
+     *           text/plain:
+     *             schema:
+     *               $ref: '#/components/schemas/OkResponse'
+     */
     expressApp.post(createRoute("/playpause"), (req, res) => {
       if (mediaInfo.status === MediaStatus.playing) {
         windowEvent(res, globalEvents.pause);
